--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Comissão",
         "Conteúdo",
         "dentro",
+        "devkit",
         "direitos",
         "elementos",
         "Espaçamento",
